2005-08-30  Roland McGrath  <roland@redhat.com>

	* Makefile.am (install-data-local): Use mkdir -p, not -mkdir.
	* Makefile.in: Regenerated.

2005-08-30  Graydon Hoare  <graydon@redhat.com>

	* tapsets.cxx (dwflpp::literal_stmt_for_local): Handle dwarf
	pointer-to-1-byte-means-char case (found in PR 1187)
	* parse.cxx (parse_symbol): Eliminate use of "." from target
	symbol parser, conflicting with string concatenation operator.
	* staptree.h (target_symbol::component_type) Eliminate
	comp_struct_pointer_member, since . and -> are considered the
	same now.
	* staptree.cxx (target_symbol::print): Likewise.
	* testsuite/buildok/seventeen.stp: Test solution on PR 1191.
	* testsuite/buildok/six.stp: Test working portion of PR 1155.
	* testsuite/semko/nineteen.stp: Unresolved portion of PR 1155.

2005-08-30  Frank Ch. Eigler  <fche@elastic.org>

	PR systemtap/1268
	* translator (varlock): Add deadlock detection code.
	(emit_common_header): Add a new MAXTRYLOCK configuration macro.

2005-08-29  Graydon Hoare  <graydon@redhat.com>

	PR translator/1265
	* tapsets.cxx
	(func_info::decl_file)
	(func_info::decl_line)
	(inline_instance_info::decl_file)
	(inline_instance_info::decl_line): New fields.
	(dwflpp::function_srcfile): Remove.
	(dwflpp::function_file): Add.
	(dwflpp::function_line): Add.
	(dwarf_derived_probe::dwarf_derived_probe): Update.
	(query_statement): Pass func, file, line through.
	(query_inline_instance_info): Likewise.
	(query_func_info): Likewise.
	(query_srcfile_line): Query statement lines if
	statement_str exists, rather than *_info.
	(query_dwarf_inline_instance): Extract file and line.
	(query_dwarf_func): Likewise.
	(query_cu): Pass empty func, file, line, for address-based
	queries.

2005-08-29  Frank Ch. Eigler  <fche@redhat.com>

	* runtest.sh: Tolerate relative $SRCDIR.

2005-08-29  Frank Ch. Eigler  <fche@redhat.com>

	* stapprobes.5.in, stapfuncs.5.in, stapex.5.in: New man pages.
	* stap.1.in: Moved some content out.